deployments/eks/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ytter-ingress-http
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "api.ytter.co.uk"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ytter-api-service
            port:
              number: 80
  tls:
  - hosts:
    - api.ytter.co.uk
    secretName: ytter-api-cert
